--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Captain America</title>
+	<link rel="icon" href="https://cdn.britannica.com/30/182830-050-96F2ED76/Chris-Evans-title-character-Joe-Johnston-Captain.jpg">
+
 </head>
 <body>
 	<!-- header element -->
@@ -27,7 +29,7 @@
 	<h2>Captains Weakness</h2>
 	<p>He is considerd as very powerful but has many weakness . Click on the link to read more about them:</p>
 	<ul>
-		<li><a href="https://www.quora.com/What-is-Captain-Americas-weakness#:~:text=Captain%20America's%20weakness%2C%20quite%20simply,at%20%22peak%20human%20healing%22.">Captain America Weakness</a></li>
+		<li><a target="_blank" href="https://www.quora.com/What-is-Captain-Americas-weakness#:~:text=Captain%20America's%20weakness%2C%20quite%20simply,at%20%22peak%20human%20healing%22.">Captain America Weakness</a></li>
 	</ul>
 </main>
 
